--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.example</groupId>
-    <artifactId>InstagramAutomation</artifactId>
+    <artifactId>BDDSourceDemo</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -39,6 +39,13 @@
             <version>1.2.5</version>
             <scope>test</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
+        <dependency>
+            <groupId>io.github.bonigarcia</groupId>
+            <artifactId>webdrivermanager</artifactId>
+            <version>3.8.1</version>
+        </dependency>
+
 
         <!-- https://mvnrepository.com/artifact/net.masterthought/cucumber-reporting -->
         <dependency>
@@ -59,6 +66,7 @@
                     <source>1.8</source>
                     <target>1.8</target>
                     <encoding>UTF-8</encoding>
+
                 </configuration>
             </plugin>
             <plugin>
@@ -115,6 +123,7 @@
                 <groupId>net.masterthought</groupId>
                 <artifactId>maven-cucumber-reporting</artifactId>
                 <version>2.8.0</version>
+
                 <executions>
                     <execution>
                         <id>execution</id>
@@ -123,7 +132,7 @@
                             <goal>generate</goal>
                         </goals>
                         <configuration>
-                            <projectName>Project Name</projectName>
+                            <projectName>Sucedemo Testing</projectName>
                             <outputDirectory>${project.build.directory}/Report/cucumber-reports</outputDirectory>
                             <cucumberOutput>${project.build.directory}/cucumber/cucumber.json</cucumberOutput>
                             <skippedFails>true</skippedFails>
